tests/error/array_errors/new_array_elem_mismatch1.py
from guppylang.decorator import guppy
from guppylang.std.builtins import array


@guppy
def main() -> array[int, 1]:
    array(False)


guppy.compile(main)