tests/error/array_errors/new_array_elem_mismatch1.err
Error: Expected return statement (at $FILE:7:4)
  | 
5 | @guppy
6 | def main() -> array[int, 1]:
7 |     array(False)
  |     ^^^^^^^^^^^^ Expected return statement

Guppy compilation failed due to 1 previous error
